sorm-tests/tests/snapshots/geometry__geom_collection-2.snap
---
source: sorm-tests/tests/geometry.rs
expression: res_string
---
{"id":{"tb":"test_geometrycollection","id":{"Number":32}},"homeGeometrycollection":[{"Point":{"x":0.0,"y":0.0}},{"LineString":[{"x":1.0,"y":1.0},{"x":2.0,"y":2.0}]}]}
