sorm-tests/tests/snapshots/geometry__multiline.snap
---
source: sorm-tests/tests/geometry.rs
expression: geom
---
TestMultilinestring {
    id: SurrealId(
        Thing {
            tb: "test_multilinestring",
            id: Number(
                32,
            ),
        },
        PhantomData<geometry::TestMultilinestring>,
        PhantomData<i32>,
    ),
    home_multilinestring: MultiLineString(
        [
            LineString(
                [
                    Coord {
                        x: 0.0,
                        y: 0.0,
                    },
                    Coord {
                        x: 1.0,
                        y: 1.0,
                    },
                    Coord {
                        x: 2.0,
                        y: 2.0,
                    },
                ],
            ),
            LineString(
                [
                    Coord {
                        x: 3.0,
                        y: 3.0,
                    },
                    Coord {
                        x: 4.0,
                        y: 4.0,
                    },
                    Coord {
                        x: 5.0,
                        y: 5.0,
                    },
                ],
            ),
        ],
    ),
}
